# python-microshop

./: .gitignore  README.md  crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml  pyrightconfig.json
alembic/versions/: 2025_11_05_1417-6c51718eaf86_create_products_table.py  2025_11_05_1437-de671c77fee2_create_users_table.py  2025_11_05_1501-6ba0c87ca76b_create_profile_and_posts_table.py  2025_11_05_1505-7984739fd4d6_create_profile_table.py  2025_11_05_1838-61a3da5133b1_create_all_table.py  2025_11_06_1011-dd116dbc51ab_create_orders_table.py  2025_11_06_1033-8cdeb69b0f50_create_order_product_association_table.py  2025_11_06_1138-f4fb1af5a1ef_create_add_none_order_product_table.py  2025_11_06_1141-886cc7486032_create_delete_none_order_product_table.py  2025_11_06_1228-df61f9992dce_add_count_to_table.py  2025_11_06_1244-6e283aefc5a0_add_unit_price_to_table.py
api_v1/: __init__.py
api_v1/demo_auth/: demo_jwt_auth.py  views.py
api_v1/products/: schemas.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  order.py  order_product_association.py  product.py  profile.py  user.py
users/: schemas.py  views.py
