[project]
name = "python-microshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.1",
    "black>=25.9.0",
    "fastapi[standard]>=0.121.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pyjwt[crypto]>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.44",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
